taken html and removed .

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <!--style sheets-->
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/responsive.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/responsive.css" rel="stylesheet">
 
 </head>
 
@@ -285,7 +285,7 @@
 
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
                         <div class="card">
-                            <img src="../Images/food items/img14.jpg" class="img-fluid">
+                            <img src="./Images/food items/img14.jpg" class="img-fluid">
                             <div class="pt-3">
                                 <h4>Italin salad</h4>
                                 <p>time: 30-45 Minutes | Serves:1</p>
@@ -297,7 +297,7 @@
 
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
                         <div class="card">
-                            <img src="../Images/food items/img5.jpg" class="img-fluid" style="height: 500px;">
+                            <img src="./Images/food items/img5.jpg" class="img-fluid" style="height: 500px;">
                             <div class="pt-3">
                                 <h4>All pizzas</h4>
                                 <p>time: 45-50 Minutes | Serves:1</p>
@@ -309,7 +309,7 @@
 
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
                         <div class="card">
-                            <img src="../Images/food items/img7.jpg" class="img-fluid" style="height: 500px;">
+                            <img src="./Images/food items/img7.jpg" class="img-fluid" style="height: 500px;">
                             <div class="pt-3">
                                 <h4>Bugers</h4>
                                 <p>time: 20-30 Minutes | Serves:1</p>
@@ -321,7 +321,7 @@
 
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
                         <div class="card">
-                            <img src="../Images/food items/img10.jpg" class="img-fluid" style="height: 500px;">
+                            <img src="./Images/food items/img10.jpg" class="img-fluid" style="height: 500px;">
                             <div class="pt-3">
                                 <h4>traditional Indians</h4>
                                 <p>time: 30-45 Minutes | Serves:1</p>
@@ -505,7 +505,7 @@
         crossorigin="anonymous"></script>
 
     <!--js file-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
